# randomcpp

./: CMakeLists.txt
include/randomcpp/: lcg.hpp  pcg.hpp
test/: test_lcg.cpp  test_pcg.cpp
